extends Control

onready var not_found_label = get_node("NotFoundLabel")
onready var error_label = get_node("ErrorLabel")
onready var not_available_label = get_node("NotAvailableLabel")
onready var spinner = get_node("CenterContainer2")
onready var spinner_animation_player = get_node("CenterContainer2/AnimationPlayer")
